--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.7.4"
