--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.16.0",
-    "react-select": "^5.7.4"
+    "react-select": "^5.7.4",
+    "tailwind-scrollbar": "^3.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
